icon and name changed

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "camera_app",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#242424",
+    "theme_color": "#242424",
     "description": "A camera application built with Flutter.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
