--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path: ^1.9.1
   gal: ^2.3.2
   flutter_launcher_icons: ^0.14.4
+  photo_manager: ^3.8.3
 
 dev_dependencies:
   flutter_test:
